--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ ul{
     text-align: center;
     color: #ffff;
     display: inline-block;
-    border: 0px solid;
+    border: 0px solid blue;
 }
 .about .about-header h1{
     font-size: 48;
@@ -196,9 +196,9 @@ ul{
     display: inline-block;
     align-items: center;
     padding-top: 60px;
-    border: 0px solid #ffff;
+    border: 0px solid black;
     text-align: left;
-    height: 86%;
+    height: 83%;
 }
 .about .about-content .about-content-text {
     width: 50%;
@@ -214,12 +214,12 @@ ul{
     display: inline-block;
     padding-right: 15%;
     float: right; /* Float right to place the image on the right */
-    border: 0px solid #ffff;
-    bottom: 0%;
+    border: 0px solid white;
     margin-bottom: 100px;
 }
 .about .about-content .about-content-image img{
     max-width: 100%;
+    max-height: 505px;
 }
 .about .about-content .about-content-text p{
     text-align: justify;
